kubernetes-gateway-api-hands-on/exercises/03-path-and-header-routing/exercise/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: routing-route
  namespace: gateway-lab
spec:
  parentRefs:
    - name: lab-gateway
  hostnames:
    - routing.gateway.local
  rules:
    - matches:
        - headers:
            - name: X-Release
              type: Exact
              value: canary
      backendRefs:
        - name: canary
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: auth
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /orders
      backendRefs:
        - name: orders
          port: 8080
          
    - backendRefs:
        - name: stable
          port: 8080
